web/app/themes/ppj/src/sass/components/quote.sass
.quote
  border-radius: $common-spacing * 2
  border-style: solid
  border-width: .8rem
  font-size: $font-size-large
  font-weight: $font-weight-bold
  padding: $common-spacing * 2 $common-spacing $common-spacing*1.5
  text-align: left

  &--left
    align-self: flex-start

  &--right
    align-self: flex-end

  &--top-left
    border-top-left-radius: 0

  &--top-right
    border-top-right-radius: 0

  &--bottom-left
    border-bottom-left-radius: 0

  &--bottom-right
    border-bottom-right-radius: 0

  &--strong
    background-color: $color-tertiary
    color: $color-white
    border-color: $color-tertiary

  &--light
    background-color: inherit
    border-color: $color-tertiary
    color: $color-tertiary

  &--inherit
    background-color: inherit
    color: inherit

  &--no-border
    border-width: 0

  @include bp('portrait')
    padding: $common-spacing

  @include bp('landscape')
    padding: $common-spacing * 1.5

  @include bp('large')
    font-size: $font-size-almost-huge
    padding: $common-spacing * 2

  &__content
    font-size: 2rem
    line-height: 2.6rem
    font-weight: $font-weight-bold

    @include bp('portrait')
      font-size: 2.4rem
      line-height: 3rem

    @include bp('landscape')
      font-size: 3rem
      line-height: 3.8rem

    @include bp('large')
      font-size: 4rem
      line-height: 4.8rem

  &__mark
    width: 3.8rem

    @include bp('portrait')
      width: 3.8rem

    @include bp('landscape')
      width: 5.2rem

    @include bp('large')
      width: 7.2rem


    path
      fill: currentColor

  &__source
    font-family: $sans-serif
    font-size: 1.6rem
    line-height: 2.2rem
    margin-top: $common-spacing

    @include bp('portrait')
      font-size: 1.8rem
      line-height: 2.4rem

    @include bp('landscape')
      font-size: 2.4rem
      line-height: 3.2rem

    @include bp('large')
      font-size: 2.8rem
      line-height: 3.8rem

